--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "browserify -t hbsfy index.js -g uglifyify > bundle.js",
     "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'",
     "push": "gh-pages -d dist",
+    "open": "xdg-open index.html",
+    "bopen": "npm run build && npm run open",
     "deploy": "npm run build && npm run dist && npm run push"
   },
   "keywords": [],
