--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "push": "gh-pages -d dist",
     "open": "xdg-open index.html",
     "bopen": "npm run build && npm run open",
+    "dev": "npm run build && budo index.js --live --open --serve bundle.js -- -t hbsfy index.js -g uglifyify",
     "deploy": "npm run build && npm run dist && npm run push"
   },
   "keywords": [],
@@ -22,5 +23,8 @@
     "hbsfy": "^2.5.1",
     "uglifyify": "^3.0.1",
     "xhr": "^2.2.0"
+  },
+  "dependencies": {
+    "hyperscript": "^1.4.7"
   }
 }
